add idp3_install