@@ -67,3 +67,93 @@ opt/shibboleth-idp# bin/build.sh
 
 #### Apache Tomcat 配置
 
+##### 基本说明
+本文中，idp.home 指代 idP 的安装路径，TOMCAT_HOME 指代 Tomcat 的安装路径
+
+所有 Tomcat8 的版本都可以用，当然最好还是用[最新的版本](http://tomcat.apache.org/download-80.cgi)
+
+##### 必须调整的配置
+
+在 idP3 中，你必须指定 Tomcat 去读取 idP 的 warfile。创建 ```TOMCAT_HOME/conf/Catalina/localhost/idp.xml```文件，复制以下内容。（注意替换 idp.home 为你自己的 idP 安装路径）
+```xml
+<Context docBase="idp.home/war/idp.war"
+         privileged="true"
+         antiResourceLocking="false"
+         swallowOutput="true" />
+```
+- Tomcat 默认监听 8080 和 8443 端口。一般我们需要把他改成 80 和 443，你可以在```TOMCAT_HOME/conf/server.xml```修改这个。本文示例中，我们将用 apache 来代理 Tomcat，所以不去管它。
+- 添加以下参数到 CATALINA_OPTS 的环境变量。在 Linux 下，可以在 Tomcat 的 bin/ 目录下创建 setenv.sh 来自动添加环境变量。
+	- ```-Didp.home=<location> ``` <location> 替换为你实际的路径
+	-  ```-Xmx512m``` 这里配置了你 Tomcat 所允许使用的最大内存，建议至少 512M
+	-  ```-XX:MaxPermSize=128m``` JVM最大允许分配的非堆内存，按需分配
+	- v3.12以后的版本中，idp.home 也可以通过 web.xml 来指定。在 edit-webapp 目录下创建web.xml，然后重新 build idp.war（未测试）
+```xml		
+<context-param>
+    <param-name>idp.home</param-name>
+    <param-value>/opt/idp</param-value>
+</context-param>
+```
+- Tomcat 默认没有提供 Java Server Tag Library，这使得 idP3 的 status 页面无法显示。解决的办法是下载 [jstl的jar包](https://build.shibboleth.net/nexus/service/local/repositories/thirdparty/content/javax/servlet/jstl/1.2/jstl-1.2.jar)，然后放在 TOMCAT_HOME/lib 内，重启 Tomcat 即可。
+
+##### 建议的配置调整
+- 限制 Post 表单的大小。在 Tomact 的 Connector 中（AJP 的或者 http 的）配置 maxPostSize参数。100K(100000)是一个相对比较合理的数值。
+- 关掉 Tomcat 的会话保持。在 ```TOMCAT_HOME/conf/context.xml```中取消 ``` <Manager pathname="" /> ``` 的注释。这可以防止在容器关闭时，idP 的会话错误。没必要通过 Tomcat 来为 idP 集群做会话保持。 
+
+#### 使用反向代理
+
+idP 部署在 tomcat 上，可以设置 http 对 tomcat 的代理，以便于维护和增强扩展性。
+这里以 CentOS6 下 使用 apache 做 ajp 反向代理为例
+
+取消 tomcat 的 AJP 身份认证（如果需要的话）
+修改```TOMCAT_HOME/conf/server.xml```
+在 ```<!-- Define an AJP 1.3 Connector on port 8009 -->```下增加
+```xml
+request.tomcatAuthentication="false" address="127.0.0.1"
+```
+
+配置 apache 的 ajp 反向代理
+修改 httpd.conf
+```ProxyPass /idp/ ajp://localhost:8009/idp```
+
+#### 部署 ssl 证书
+
+在 apache 上部署 ssl 证书可比 tomcat 容易多了
+
+查看```/etc/httpd/conf.d/ssl.conf```
+在对应路径下部署证书
+
+#### idP 状态的查看
+
+访问 https://idp.exmaple.edu.cn/idp/status
+查看 idP 状态信息，主要需要在 Tomcat 中增加 jstl 的jar包
+
+默认之允许本机访问，可修改 ```idp.home/conf/access-control.xml``` 来增加允许访问的地址。 
+
+#### 时间同步
+
+idP 服务队时间敏感，因此务必配置 ntp 服务同步时间。上海教育城域网用户可使用 ntp.shec.edu.cn
+
+#### 服务的启停
+
+Tomcat服务的启停
+```
+TOMCAT_HOME/bin/startup.sh
+TOMCAT_HOME/bin/shutdown.sh
+```
+Apache服务的启停
+```
+Service start httpd
+Service stop httpd
+```
+
+可以设置为系统自动启动服务，仍以 CentOS 6 为例
+```
+Chkconfig httpd on
+Chkconfig ntpd on
+```
+修改```/etc/rc.local```
+添加
+```
+TOMACT_HOME/bin/startup.sh
+```
+
